[package]
name = "walker"
version = "0.1.0"
authors = ["Anton Österberg <anton@42x.io>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE"
description = "Library for file and directory traversal in a file system"
readme = "README.md"
keywords = ["fs", "filesystem", "traversal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"