[package]
name = "fwalker"
version = "0.3.4"
authors = ["Anton Österberg <anton@42x.io>"]
edition = "2018"
license = "MIT"
description = "Library for file and directory traversal in a file system"
repository = "https://github.com/mantono/fwalker"
readme = "README.md"
keywords = ["fs", "filesystem", "files", "traversal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
sysinfo = "0.15"

[badges]
maintenance = { status = "experimental" }

[profile.release]
lto = true